--- a/Initial notebook.Rmd
+++ b/Initial notebook.Rmd
@@ -7,15 +7,9 @@ Bash run:
 sudo apt-get install libcurl4-openssl-dev libssl-dev libxml2-dev
 
 Install dependencies
-```{r setup}
-install.packages("devtools")
-devtools::install_github("KrishnaTO/FAOSTATpackage")
-install.packages("https://github.com/KrishnaTO/FAOSTATpackage")
-
-```
-
 ```{r}
-fao <- FAOsearch(full=T)
+install.packages("devtools")
+install.packages(c('RJSONIO','plyr','data.table','classInt','ggplot2','labeling', 'readr'))
 
 ```
 
@@ -26,14 +20,18 @@ OA=48=crop_production
 QC=57=population
 TP=74=crop_trade
 
-```{r, "https://github.com/muuankarski/faobulk/blob/master/R/get_data.R"}
-get_data <- function(DatasetCode = "QP"){
+```{r functions, output=F}
+devtools::load_all("FAOSTATpackage/FAOSTAT")
+fao <- FAOsearch(full=T)
 
+# Retrieved: https://github.com/muuankarski/faobulk/blob/master/R/get_data.R
+get_data <- function(DatasetCode = "QP"){
+  
   datas <- fao
   urli <- datas[datas$DatasetCode == DatasetCode,]$FileLocation
   fly <- tempfile(fileext = ".zip")
   download.file(url = urli, destfile = fly)
-  dat <- read_csv(fly)
+  dat <- readr::read_csv(fly)
   names(dat) <- tolower(sub(" ", "_", names(dat)))
   return(dat)
 }
@@ -42,23 +40,38 @@ get_data <- function(DatasetCode = "QP"){
 ```{r}
 # Download complete FAO zip: fenixservices.fao.org/faostat/static/bulkdownloads/FAOSTAT.zip
 
+write.to.table <- function(table_acronym){
+  table <- get_data(table_acronym)[,c(2,4,6,8,9,10)]
+  write.table(table, "crop_data.csv", append = T, sep = "|")
+}
+write.to.table("OA")
+
 # Specific tables
 population <- get_data("OA")[,c(2,4,6,8,9,10)]
+write.table(population, "crop_total.csv", sep = "|")
+rm(population)
+
 crop_stock <- get_data("BC")[,c(2,4,6,8,9,10)]
+write.table(crop_stock, "crop_total.csv", append = T, sep = "|")
+rm(crop_stock)
+
 crop_supply <- get_data("CC")[,c(2,4,6,8,9,10)]
+write.table(crop_supply, "crop_total.csv", append = T, sep = "|")
+rm(crop_supply)
+
 crop_production <- get_data("QC")[,c(2,4,6,8,9,10)]
+write.table(crop_production, "crop_total.csv", append = T, sep = "|")
+rm(crop_production)
+
+
 crop_trade <- get_data("TP")[,c(2,4,6,8,9,10)]
+write.table(crop_trade, "crop_total.csv", append = T, sep = "|")
+rm(crop_trade)
+
+# crop_total <- rbind(crop_production, crop_stock, crop_supply, crop_trade)
+# rm(crop_production, crop_stock, crop_supply, crop_trade)
+# crop_total <- crop_total[!crop_total$value==0,]
+# crop_total <- crop_total[complete.cases(crop_total),]
 ```
 
-
-```{r}
-crop_total <- rbind(crop_production, crop_stock, crop_supply, crop_trade)
-rm(crop_production, crop_stock, crop_supply, crop_trade)
-crop_total <- crop_total[!crop_total$value==0,]
-crop_total <- crop_total[complete.cases(crop_total),]
-```
-
-```{r}
-write.csv(crop_total, "crop_total.csv")
-```
 
